--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -4,16 +4,16 @@
         <form (ngSubmit)="submitQuestion()" #questionVM="ngForm" class="form-horizontal" role="form" id="search-panel">
             <input type="text" class="form-control search-input fixed-height" #searchText placeholder="Haz tu pregunta aquí o busca tus preguntas aquí" id="title" autocomplete="off" (click)="showModal()"
                    [(ngModel)]="title" required name="titleName" #titleName="ngModel" (keyup)=filterQuestions() />
-            <!--<div class="suggestions" id="suggestion" *ngIf="(filteredQuestionList.length > 0) || (categoryMatched.length > 0) ">-->
-                <div class="ask-detail " *ngIf="(filteredQuestionList.length > 0) || (categoryMatched.length > 0)">
+            <div class="suggestions" id="suggestion" *ngIf="(filteredQuestionList.length > 0) || (categoryMatched.length > 0) ">
+                <div class="suggestion-container" *ngIf="(filteredQuestionList.length > 0) || (categoryMatched.length > 0)">
                     <div class="question-components">
-                        <select class="form-control catagory-dropdown" id="Category" required  (change)="onCategoryChange($event)" [(ngModel)]="categoryID" name="category" #categoryObj="ngModel">
+                        <select class="form-control catagory-dropdown" id="Category" required (change)="onCategoryChange($event)" [(ngModel)]="categoryID" name="category" #categoryObj="ngModel">
                             <option [value]="-1" disabled="true" selected>Selecciona la categoría</option>
                             <option *ngFor="let category of categories" [value]="category.id">
                                 {{category.name}}
                             </option>
                         </select>
-                        <select class="form-control catagory-dropdown" id="topics" required   (change)="onTopicChange($event)">
+                        <select class="form-control catagory-dropdown" id="topics" required (change)="onTopicChange($event)">
                             <option [value]="-1" disabled="true" selected>Selecciona la tematica</option>
                             <option *ngFor="let category of categories" [value]="category.id">
                                 {{category.name}}
@@ -31,7 +31,8 @@
 
                     </div>
                 </div>
-                <div class="suggestions" *ngIf="(filteredQuestionList.length > 0) || (categoryMatched.length > 0)">
+                <div class="suggestion-container" *ngIf="(filteredQuestionList.length > 0) || (categoryMatched.length > 0)">
+                    <div class="arrow-container"></div>
                     <ul class="question-List">
                         <li *ngFor="let item of filteredQuestionList">
                             <a (click)="selectQuestionDetails(item)">{{item.title}}</a>
@@ -45,13 +46,11 @@
                             <a><span class="search-footer">Search:</span>  {{title?title+'?':''}}</a>
                         </li>
                     </ul>
-
                 </div>
-            <!--</div>-->
+            </div>
 
             <div class="input-group-btn">
                 <div class="btn-group" role="group">
-
                     <button type="submit" class="btn btn-primary fixed-height" [disabled]="!titleName.valid"><span class="glyphicon glyphicon-search" aria-hidden="true"></span><span class="ask-text">Enviar</span></button>
                 </div>
             </div>
