--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
@@ -1,4 +1,10 @@
-﻿.input-group-btn {
+﻿.topic-icon{
+    background-color: #f6912b;
+    padding: 3px;
+    color: white;
+    margin-right: 5px;
+}
+.input-group-btn {
     width: auto;
 }
 .question-control{
@@ -25,7 +31,6 @@ textarea{
     right: 0;
     background-color: rgba(0, 0, 0, 0.5);
 }
-
 .search-icon {
     background: transparent;
     position: absolute;
