--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/left-menu/topfive-user.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/left-menu/topfive-user.component.html
@@ -1,17 +1,22 @@
-﻿<div class="menu-container">
+﻿<style>
+    .user-list > li {
+        list-style-type: none;
+        margin-bottom: 3px;
+    }
+
+    .user-list >li> a {
+        display: inline-block;
+        padding-top: 10px;
+    }
+</style>
+<div class="menu-container">
     <div class="question-title"><h4>Top Users</h4></div>
     <img class="horizontal-border" src="../../../../images/border-horizontal.png" />
-    <ul class="question-list" style="margin-left: -22px;">
-        <li *ngFor="let topFiveUser of topFiveUsers" style="list-style-type: none;">
-            <div>
-                <img class="user-image img-circle" src="../../../../profile/{{topFiveUser?.imageUrl}}" />
-            </div>
-            <div style="margin-left: 37px!important">
-
-                        <!--{{topFiveUser?.name}}-->
-                <a [routerLink]="['/dashboard/detail/',topFiveUser?.id]"> {{topFiveUser?.name}}</a>
-            </div>
-
+    <ul class="user-list">
+        <li *ngFor="let topFiveUser of topFiveUsers">
+            <img class="user-image img-circle" src="../../../../profile/{{topFiveUser?.imageUrl}}" />
+            <a [routerLink]="['/dashboard/detail/',topFiveUser?.id]"> {{topFiveUser?.name}}</a>
+            <div class="clearfix"></div>
         </li>
     </ul>
 </div>
