--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -48,7 +48,7 @@
                         <question-header [question]="question"></question-header>
                         <div class="article-details">
                             <user-info [userObj]="question.lastAnswer?.userViewModel" [viewDate]="question.lastAnswer?.answerDate"></user-info>
-                            <div class="answer-text" [innerHTML]="question.lastAnswer?.text.substring(0,200)"></div>
+                            <div class="answer-text" [innerHTML]="question.lastAnswer?.text?.substring(0,200)"></div>
                             <div *ngIf="question.answers[question.answers.length-1]"> by {{question.answers[question.answers.length-1]?.userViewModel?.name}} {{question.answers[question.answers.length-1]?.createdOn | date: 'dd MMM, yyyy'}}</div>
                             <hr />
                             <ap-status [questionObj]="question"> </ap-status>
