Home page: on scroll left panel fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -20,6 +20,7 @@
 @import "site/comment";
 @import "site/userinfo";
 @import "site/color-scheme";
+@import "site/alta-sites";
 .right-border{
     border-right:1px solid;
     color:white;
