--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -1,8 +1,11 @@
 ﻿<div class="row">
-    <div class="left-panel">
-        <topfive-question-left-menu> </topfive-question-left-menu>
-        <topfive-user></topfive-user>
-        <question-left-menu></question-left-menu>
+    <div class="left-panel" >
+        <div>.</div>
+        <div id="leftPanel">
+            <topfive-question-left-menu> </topfive-question-left-menu>
+            <topfive-user></topfive-user>
+            <question-left-menu></question-left-menu>
+        </div>
     </div>
     <div class="tab-content-panel">
         <div class="tab" *ngFor="let question of questions">
