--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.css
@@ -1,10 +1,4 @@
-﻿.left-panel {
-    float: left;
-    width: 23%;
-    padding-right:10px;
-}
-
-.tab-content-panel {
+﻿.tab-content-panel {
     width: 55%;
     float: left;
     margin-left: -7px;
