Left panel add in question home: as in home page

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -1,15 +1,15 @@
 ﻿<div class="row">
-    <div class="col-md-3 left-gap">
+    <!--<div class="col-md-3 left-gap">
         <question-left-menu></question-left-menu>
-    </div>
-    <!--<div class="left-panel">
+    </div>-->
+    <div class="left-panel">
         <div>.</div>
         <div id="leftPanel">
             <topfive-question-left-menu> </topfive-question-left-menu>
             <topfive-user></topfive-user>
-            <question-left-menu></question-left-menu>
+            <category-left-menu></category-left-menu>
         </div>
-    </div>-->
+    </div>
     <div class="col-md-8">
 
         <div class="loader" *ngIf="loader.isLoading"></div>
