AKASH:Statuds bar updated with realtime data

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -9,7 +9,7 @@
         {{questionObj.comments?.length}} 
     </div>
     <a class="status-line" data-toggle="collapse" aria-expanded="false" attr.data-target="#questionComment{{questionObj.id}}">Comentarios</a>
-    <div class="status-line number-box">5</div>
+    <div class="status-line number-box">{{questionObj?.answers?.length}}</div>
     <div class="status-line">Respuestas</div>
 
     <!--==========Right Side=====-->
