--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/question-header/question-header.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/question-header/question-header.component.html
@@ -1,7 +1,7 @@
 ﻿<ul class="question-header">
     <li>{{question.categories[0]?.name}}</li>
-    <li class="question-info">Question Topic</li>
-    <li class="question-info">Question Level</li>
+    <li class="question-info" >{{question?.questionTopicNames[0]}}</li>
+    <li class="question-info" *ngIf="question.questionLevelNames.length!=0">{{question?.questionLevelNames[0]}}</li>
     <li class="question-info">{{question?.createdOn | date: 'MMM, yyyy'}}</li>
 </ul>
 <h3 class="question-title">
