Overlay scrol added, some console log removed, Component communication service added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -1,13 +1,10 @@
 ﻿<div class="row">
-    <!--<div class="col-md-3 left-gap">
-        <question-left-menu></question-left-menu>
-    </div>-->
     <div class="left-panel">
         <div>.</div>
         <div id="leftPanel">
             <topfive-question-left-menu> </topfive-question-left-menu>
             <topfive-user></topfive-user>
-            <category-left-menu></category-left-menu>
+            <category-left-menu [caegoryId]="id"></category-left-menu>
         </div>
     </div>
     <div class="col-md-8">
