top question and top  user  by category filter services added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
@@ -12,8 +12,8 @@
 <div class="menu-container">
     <div class="question-title"><h4>Top Users</h4></div>
     <img class="horizontal-border" src="../../../../images/border-horizontal.png" />
-    <ul class="user-list">
-        <li *ngFor="let topFiveUser of topFiveUsers">
+    <ul class="user-list" *ngIf="topFiveUsers.length>0">
+        <li  *ngFor="let topFiveUser of topFiveUsers">
             <img class="user-image img-circle" src="../../../../profile/{{topFiveUser?.imageUrl}}" />
             <a [routerLink]="['/dashboard/detail/',topFiveUser?.id]"> {{topFiveUser?.name}}</a>
             <div class="clearfix"></div>
