--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/category-left-menu.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/category-left-menu.component.html
@@ -2,6 +2,6 @@
     <div class="question-title"><h3>Categories</h3></div>
     <img class="horizontal-border" src="../../../../images/border-horizontal.png" />
     <ul class="category-list">
-        <li *ngFor="let category of categories"><a [routerLink]="['/question/home',category.id]"> {{category.name}}</a></li>
+        <li *ngFor="let category of categories"><a [routerLink]="['/question/home',category.id]"> {{category?.name}}</a></li>
     </ul>
 </div>
