--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -1,5 +1,6 @@
 ﻿<div class="status-panel">
-    <img class="like-logo" src="../images/fade-logo.png" />
+    <img *ngIf="questionObj?.answers[0]?.likes?.length<1"  src='../images/fade-logo.png'  onmouseover="this.src = '../images/like-logo.png';" onmouseout="this.src = '../images/fade-logo.png';" />
+    <img *ngIf="questionObj?.answers[0]?.likes?.length>0" src='../images/like-logo.png' />
     <a href="#" data-toggle="modal" data-target="#myModal" class="number-box" (click)="submitLikeUserDetails(questionObj.answers[0]?.id,questionObj.id)"> {{questionObj?.answers[0]?.likes?.length}}</a>
     <a (click)="submitLike(questionObj.answers[0]?.id,questionObj.id)"><div class="status-line">Like</div></a>
     <div class="status-line like-border "></div>
